--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,13 +123,8 @@ dev = [
   "types-tabulate",
 ]
 
-tools = [
-  "metadrive-simulator @ https://github.com/commaai/metadrive/releases/download/MetaDrive-minimal-0.4.2.4/metadrive_simulator-0.4.2.4-py3-none-any.whl ; (platform_machine != 'aarch64')",
-  "dearpygui>=2.1.0",
-]
-
 [project.urls]
-Homepage = "https://github.com/commaai/openpilot"
+Homepage = "https://github.com/cylin577/openPIlot"
 
 [build-system]
 requires = ["hatchling"]
